# plant-tech

./: .envrc.sample  .gitignore  README  README.md  dataset-config.sample.yml  fiftyone.Dockerfile  jupyterlab.gpu.Dockerfile  pyproject.toml
notebooks/: 00_explore.ipynb  01_baseline.ipynb
src/: DataLoader.py  main.py
