[tool.poetry]
name = "plant-tech-v2"
version = "0.1.0"
description = ""
authors = ["Simon Butt <simonbutt123@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
tensorflow = "2.7.0"
google-cloud-storage = "^2.5.0"
pandas = "1.3.5"
gcsfs = "^2022.8.2"

[tool.poetry.dev-dependencies]
fiftyone = "0.16.5"
jupyterlab = "^3.4.6"
kaleido = "0.2.1"
black = {extras = ["jupyter"], version = "^22.8.0"}
commitizen = "^2.32.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
